--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,6 +10,9 @@ bind-key ç select-pane -R
 
 set-option -g status-position top
 
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
